--- a/docs/source/locale/uk/LC_MESSAGES/standard/item.po
+++ b/docs/source/locale/uk/LC_MESSAGES/standard/item.po
@@ -47,14 +47,15 @@ msgid ""
 "including CAV and GSIN."
 msgstr ""
 "|ocdsDescription| Початкова класифікація елемента. Дивіться у "
-"itemClassificationScheme, щоб визначити бажані списки класифікації, "
-"включно з CAV та GSIN."
+"itemClassificationScheme, щоб визначити бажані списки класифікації, включно "
+"з CAV та GSIN."
 
 msgid ""
 "It is required for `classification.scheme` to be `CAV`. The "
 "`classification.id` should be valid CAV code."
-msgstr "Класифікація classification.scheme обов’язково повинна "
-"бути CAV. classification.id повинно бути дійсним CAV кодом."
+msgstr ""
+"Класифікація classification.scheme обов’язково повинна бути CAV. "
+"classification.id повинно бути дійсним CAV кодом."
 
 msgid "additionalClassifications"
 msgstr ""
@@ -67,10 +68,11 @@ msgid ""
 "the `itemClassificationScheme` codelist for common options to use in OCDS. "
 "This may also be used to present codes from an internal classification "
 "scheme."
-msgstr "|ocdsDescription| Масив додаткових класифікацій для елемента. "
-"Дивіться у список кодів itemClassificationScheme, щоб використати "
-"поширені варіанти в OCDS. Також можна використовувати для представлення "
-"кодів з внутрішньої схеми класифікації."
+msgstr ""
+"|ocdsDescription| Масив додаткових класифікацій для елемента. Дивіться у "
+"список кодів itemClassificationScheme, щоб використати поширені варіанти в "
+"OCDS. Також можна використовувати для представлення кодів з внутрішньої "
+"схеми класифікації."
 
 msgid "unit"
 msgstr ""
@@ -81,8 +83,9 @@ msgstr ":ref:`Unit`"
 msgid ""
 "|ocdsDescription| Description of the unit which the good comes in e.g.  "
 "hours, kilograms. Made up of a unit name, and the value of a single unit."
-msgstr "|ocdsDescription| Опис одиниці виміру товару, наприклад, години, "
-"кілограми. Складається з назви одиниці та значення однієї одиниці."
+msgstr ""
+"|ocdsDescription| Опис одиниці виміру товару, наприклад, години, кілограми. "
+"Складається з назви одиниці та значення однієї одиниці."
 
 msgid "quantity"
 msgstr ""
@@ -111,7 +114,8 @@ msgstr "словник"
 msgid ""
 "Geographical coordinates of the location. Element consists of the following "
 "items:"
-msgstr "Географічні координати місця розташування. Складається з таких компонентів:"
+msgstr ""
+"Географічні координати місця розташування. Складається з таких компонентів:"
 
 msgid "latitude"
 msgstr ""
@@ -130,5 +134,9 @@ msgstr "рядок, не обов’язково, переважно не вик
 
 msgid ""
 "`location` usually takes precedence over `address` if both are present."
-msgstr "Параметр location зазвичай має вищий пріоритет ніж address, якщо "
-"вони обидва вказані."
+msgstr ""
+"Параметр location зазвичай має вищий пріоритет ніж address, якщо вони обидва"
+" вказані."
+
+msgid "decimal"
+msgstr "неціле число"
